fix: sidebar overflow-x fixed

--- a/src/components/Menu/menu.module.scss
+++ b/src/components/Menu/menu.module.scss
@@ -14,6 +14,7 @@
   box-shadow: 0px 4px 28px #e1e5ec;
   transition: transform .25s cubic-bezier(0.19, 1, 0.22, 1);
   overflow-y: auto;
+  overflow-x: hidden;
 
   &Logo {
     margin-bottom: 100px;
